Aufgabe_2_AZAD/target/generated-sources/antlr4/Grammar_For_CParser.java
// Generated from Grammar_For_C.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Grammar_For_CParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OPERATOR=1, IGNORE=2, OPERAND=3, RESERVED=4, OPERATORS=5, TYPE_QUAL=6, 
		SCSPEC=7, IGNORESYMBOLS2=8, CONSTANT=9, TYPESPEC=10, IDENTIFIER=11, FLOAT=12, 
		STRING=13, INT=14, LINE_COMMENT=15, COMMENT=16, INCLUDE=17, ALOTOFWHITESPACE=18, 
		IGNORESYMBOLS=19;
	public static final String[] tokenNames = {
		"<INVALID>", "OPERATOR", "IGNORE", "OPERAND", "RESERVED", "OPERATORS", 
		"TYPE_QUAL", "SCSPEC", "'do'", "CONSTANT", "TYPESPEC", "IDENTIFIER", "FLOAT", 
		"STRING", "INT", "LINE_COMMENT", "COMMENT", "INCLUDE", "ALOTOFWHITESPACE", 
		"IGNORESYMBOLS"
	};
	public static final int
		RULE_r = 0, RULE_allTokens = 1;
	public static final String[] ruleNames = {
		"r", "allTokens"
	};

	@Override
	public String getGrammarFileName() { return "Grammar_For_C.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Grammar_For_CParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RContext extends ParserRuleContext {
		public List<AllTokensContext> allTokens() {
			return getRuleContexts(AllTokensContext.class);
		}
		public AllTokensContext allTokens(int i) {
			return getRuleContext(AllTokensContext.class,i);
		}
		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_For_CListener ) ((Grammar_For_CListener)listener).enterR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_For_CListener ) ((Grammar_For_CListener)listener).exitR(this);
		}
	}

	public final RContext r() throws RecognitionException {
		RContext _localctx = new RContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_r);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(5); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(4); allTokens();
				}
				}
				setState(7); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPERATOR) | (1L << IGNORE) | (1L << OPERAND))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AllTokensContext extends ParserRuleContext {
		public TerminalNode IGNORE() { return getToken(Grammar_For_CParser.IGNORE, 0); }
		public TerminalNode OPERAND() { return getToken(Grammar_For_CParser.OPERAND, 0); }
		public TerminalNode OPERATOR() { return getToken(Grammar_For_CParser.OPERATOR, 0); }
		public AllTokensContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_allTokens; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_For_CListener ) ((Grammar_For_CListener)listener).enterAllTokens(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grammar_For_CListener ) ((Grammar_For_CListener)listener).exitAllTokens(this);
		}
	}

	public final AllTokensContext allTokens() throws RecognitionException {
		AllTokensContext _localctx = new AllTokensContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_allTokens);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(9);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPERATOR) | (1L << IGNORE) | (1L << OPERAND))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}